--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                                 <ul>
                                     <li><a href="#">OverView</a></li>
                             <li><a href="#">How it works</a></li>
-                            <li><a href="#">Deep cApabilities</a></li>
+                            <li><a href="#">Deep Capabilities</a></li>
                             <li><a href="#">solutions</a></li>
                             <li><a href="#">Testimonials</a></li>
                         </ul>
